{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 150,
  "lineage": "ed6d0cb9-c28c-ea62-5b6a-1f73374eb3c9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca3a0f725a374e64",
            "domain": "vpc",
            "id": "eipalloc-0ca3a0f725a374e64",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-134-50-76.us-east-2.compute.amazonaws.com",
            "public_ip": "3.134.50.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Asteovskiy_vpc-project-x-us-east-2a"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Asteovskiy_vpc-project-x-us-east-2a",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:internet-gateway/igw-0b9cb3a63d0d8a32c",
            "id": "igw-0b9cb3a63d0d8a32c",
            "owner_id": "335809563306",
            "tags": {
              "Name": "Asteovskiy_vpc-project-x"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Asteovskiy_vpc-project-x",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca3a0f725a374e64",
            "connectivity_type": "public",
            "id": "nat-097c3371e690761f3",
            "network_interface_id": "eni-03983382564793395",
            "private_ip": "10.36.30.5",
            "public_ip": "3.134.50.76",
            "subnet_id": "subnet-058dde08941525ee5",
            "tags": {
              "Name": "Asteovskiy_vpc-project-x-us-east-2a"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Asteovskiy_vpc-project-x-us-east-2a",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0acbbbcd0bd88714d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-097c3371e690761f3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0acbbbcd0bd88714d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b9cb3a63d0d8a32c",
            "id": "r-rtb-03674c2e2e34fe79f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03674c2e2e34fe79f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:route-table/rtb-0acbbbcd0bd88714d",
            "id": "rtb-0acbbbcd0bd88714d",
            "owner_id": "335809563306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Asteovskiy_vpc-project-x-private"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Asteovskiy_vpc-project-x-private",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:route-table/rtb-03674c2e2e34fe79f",
            "id": "rtb-03674c2e2e34fe79f",
            "owner_id": "335809563306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Asteovskiy_vpc-project-x-public"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Asteovskiy_vpc-project-x-public",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac1cc9d516866249",
            "route_table_id": "rtb-0acbbbcd0bd88714d",
            "subnet_id": "subnet-0e9dc8827c272dc8d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4f819494f1cc9c8",
            "route_table_id": "rtb-0acbbbcd0bd88714d",
            "subnet_id": "subnet-07379d1235ffbd6cd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7670e709e210ebf",
            "route_table_id": "rtb-0acbbbcd0bd88714d",
            "subnet_id": "subnet-04978e2ace510a47e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e72eb590b12460a5",
            "route_table_id": "rtb-03674c2e2e34fe79f",
            "subnet_id": "subnet-058dde08941525ee5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09949a89845d92a93",
            "route_table_id": "rtb-03674c2e2e34fe79f",
            "subnet_id": "subnet-0e52045d1167295ba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0761d498802d8bb93",
            "route_table_id": "rtb-03674c2e2e34fe79f",
            "subnet_id": "subnet-047c2d68a5b0d5bd1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:subnet/subnet-0e9dc8827c272dc8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.36.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9dc8827c272dc8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Asteovskiy_vpc-project-x-private-us-east-2a"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Asteovskiy_vpc-project-x-private-us-east-2a",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:subnet/subnet-07379d1235ffbd6cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.36.128.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07379d1235ffbd6cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Asteovskiy_vpc-project-x-private-us-east-2b"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Asteovskiy_vpc-project-x-private-us-east-2b",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:subnet/subnet-04978e2ace510a47e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.36.160.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04978e2ace510a47e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Asteovskiy_vpc-project-x-private-us-east-2c"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Asteovskiy_vpc-project-x-private-us-east-2c",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:subnet/subnet-058dde08941525ee5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.36.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058dde08941525ee5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Asteovskiy_vpc-project-x-public-us-east-2a"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Asteovskiy_vpc-project-x-public-us-east-2a",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:subnet/subnet-0e52045d1167295ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.36.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e52045d1167295ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Asteovskiy_vpc-project-x-public-us-east-2b"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Asteovskiy_vpc-project-x-public-us-east-2b",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:subnet/subnet-047c2d68a5b0d5bd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.36.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047c2d68a5b0d5bd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Asteovskiy_vpc-project-x-public-us-east-2c"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Asteovskiy_vpc-project-x-public-us-east-2c",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:vpc/vpc-0f5259b11a88615cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.36.0.0/16",
            "default_network_acl_id": "acl-0553c85660d4ef9f5",
            "default_route_table_id": "rtb-0cf0ec8df70e1aacd",
            "default_security_group_id": "sg-031f177f00fa36d47",
            "dhcp_options_id": "dopt-07ebeb9c52a7d85a9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5259b11a88615cf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf0ec8df70e1aacd",
            "owner_id": "335809563306",
            "tags": {
              "Name": "Asteovskiy_vpc-project-x"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Asteovskiy_vpc-project-x",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}